# calculator_mcp

./: .gitignore  README.md  calculator.py  pyproject.toml  sse_server.py  stdio_server.py
agent/: agent.py
calculator_agent/: agent.py
calculator_agent_litellm/: agent.py
tests/: test_calculator.py
