[project]
name = "calculator-mcp"
version = "0.1.0"
description = "MCP tool for calculator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.70.2",
    "mcp>=1.9.0",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
